force-app/main/default/objects/Invoice__c/fields/BusinessOpportunity__c.field-meta.xml
<CustomField>
    <fullName>BusinessOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>