force-app/main/default/objects/Invoice__c/fields/City_Code_Diag__c.field-meta.xml
<CustomField>
    <fullName>City_Code_Diag__c</fullName>
    <label>City Code Diag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>