force-app/main/default/objects/Invoice__c/fields/Invoice_City__c.field-meta.xml
<CustomField>
    <fullName>Invoice_City__c</fullName>
    <label>Customer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>