force-app/main/default/objects/Invoice__c/fields/Invoice_District__c.field-meta.xml
<CustomField>
    <fullName>Invoice_District__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>