force-app/main/default/objects/Invoice__c/fields/Invoice_Division__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Division__c</fullName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>