force-app/main/default/objects/Invoice__c/fields/Invoice_Plant__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Plant__c</fullName>
    <label>Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>