force-app/main/default/objects/Invoice__c/fields/Invoice_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sales_Group__c</fullName>
    <label>Sales Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>