force-app/main/default/objects/Invoice__c/fields/Invoice_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sales_Office__c</fullName>
    <label>Sales Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>