force-app/main/default/objects/Invoice__c/fields/Related_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Related_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Customer_Demand__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>