force-app/main/default/objects/Invoice__c/fields/Related_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>