force-app/main/default/objects/Invoice__c/fields/SO_Customer_Ref__c.field-meta.xml
<CustomField>
    <fullName>SO_Customer_Ref__c</fullName>
    <label>SO Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>