force-app/main/default/objects/Invoice__c/fields/SO_Customer_Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Customer_Ref_Date__c</fullName>
    <label>SO Ref Date</label>
    <type>Date</type>
</CustomField>