force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Customer_Code__c</columns>
    <columns>Invoice_Customer_Name__c</columns>
    <columns>Invoice_Plant__c</columns>
    <columns>Related_Sales_Order__c</columns>
    <columns>Related_Quotation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>